<resources>
    <string name="app_name">GPS_Memories</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm password</string>
    <string name="logout">Logout</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="address">Address</string>
    <string name="location">Location</string>
    <string name="time">Time</string>
    <string name="description">Description</string>
</resources>
