<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.Memory.View_MemoryActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        android:orientation="vertical"
        >

    <TextView
        android:id="@+id/timeTextView"
        android:textColor="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12sp"
        android:text="@string/time"
        tools:ignore="MissingConstraints" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical"
            android:padding="20sp"
            tools:ignore="MissingConstraints">


            <TextView
                android:id="@+id/titleTextView"
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="20sp"
                android:inputType="text" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/memory_photosRC"
                android:layout_width="wrap_content"
                android:layout_marginBottom="20sp"
                android:layout_height="wrap_content"/>








            <TextView
                android:id="@+id/addressTextView"
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:text="@string/address"
                />


            <ImageView
                android:id="@+id/map"
                android:layout_gravity="end"
                android:src="@drawable/ic_map"
                android:layout_marginBottom="10sp"
                android:layout_width="50sp"
                android:layout_height="50sp"/>






                <TextView
                    android:id="@+id/descriptionTextView"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:text="@string/description"
                     />









        </LinearLayout>

    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>