<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.Memory.AddActivity">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical"
            android:padding="20sp"
            tools:ignore="MissingConstraints">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/titleEditText"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:hint="@string/title"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>





            <TextView
                android:id="@+id/addressTextView"
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:text="@string/address"
                />


            <ImageView
                android:id="@+id/map"
                android:layout_gravity="end"
                android:src="@drawable/ic_map"
                android:layout_marginBottom="5sp"
                android:layout_width="50sp"
                android:layout_height="50sp"/>


            <TextView
                android:id="@+id/timeTextView"
                android:textColor="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:text="@string/time"
                />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/descriptionEditText"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="200sp"
                    android:layout_marginBottom="20sp"
                    android:hint="@string/description"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>






            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/memory_photosRC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                android:layout_marginTop="10sp"
                android:id="@+id/memory_photobtn"
                android:src="@drawable/ic_camera"
                android:layout_width="40sp"
                android:layout_height="40sp"/>


        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        android:orientation="vertical"
        >

        <com.google.android.material.floatingactionbutton.FloatingActionButton

            android:id="@+id/save_memorybtn"
            android:layout_width="wrap_content"
            android:layout_height="100sp"
            android:backgroundTint="@color/colorPrimary"
            android:src="@drawable/ic_save"
            android:layout_margin="16dp"
            tools:ignore="MissingConstraints" />

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>